Bug 392082 - Crash at startup after uninstall flatpak package
Summary: Crash at startup after uninstall flatpak package
Status: RESOLVED FIXED
Alias: None
Product: Discover
Classification: Applications
Component: discover (other bugs)
Version First Reported In: unspecified
Platform: Neon Linux
: NOR crash
Target Milestone: ---
Assignee: Aleix Pol
URL:
Keywords: drkonqi
Depends on:
Blocks:
 
Reported: 2018-03-20 02:47 UTC by Patrick Silva
Modified: 2018-03-27 15:39 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2018-03-20 02:47:16 UTC
Application: plasma-discover (5.12.80)

Qt Version: 5.10.0
Frameworks Version: 5.45.0
Operating System: Linux 4.13.0-37-generic x86_64
Distribution: KDE neon Developer Edition

-- Information about the crash:
- What I was doing when the application crashed:
I uninstalled discord installed from flathub, discover said "failed" despite discord was successfully uninstalled. I closed discover and did double click on discord .deb package 
in dolphin. So immediately plasma shown a notification about discover crash.

-- Backtrace:
Application: Discover (plasma-discover), signal: Segmentation fault
Using host libthread_db library "/lib/x86_64-linux-gnu/libthread_db.so.1".
[Current thread is 1 (Thread 0x7f51958cb8c0 (LWP 20381))]

Thread 3 (Thread 0x7f517ec76700 (LWP 20383)):
#0  0x00007f5190d0827d in read () at ../sysdeps/unix/syscall-template.S:84
#1  0x00007f518b8026f0 in read (__nbytes=16, __buf=0x7f517ec75ad0, __fd=<optimized out>) at /usr/include/x86_64-linux-gnu/bits/unistd.h:44
#2  g_wakeup_acknowledge (wakeup=0x7f51780027b0) at /build/glib2.0-prJhLS/glib2.0-2.48.2/./glib/gwakeup.c:210
#3  0x00007f518b7bee74 in g_main_context_check (context=context@entry=0x7f5170000990, max_priority=2147483647, fds=fds@entry=0x7f5170003070, n_fds=n_fds@entry=1) at /build/glib2.0-prJhLS/glib2.0-2.48.2/./glib/gmain.c:3632
#4  0x00007f518b7bf330 in g_main_context_iterate (context=context@entry=0x7f5170000990, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at /build/glib2.0-prJhLS/glib2.0-2.48.2/./glib/gmain.c:3837
#5  0x00007f518b7bf49c in g_main_context_iteration (context=0x7f5170000990, may_block=may_block@entry=1) at /build/glib2.0-prJhLS/glib2.0-2.48.2/./glib/gmain.c:3901
#6  0x00007f51919485cb in QEventDispatcherGlib::processEvents (this=0x7f51700008c0, flags=...) at kernel/qeventdispatcher_glib.cpp:425
#7  0x00007f51918ef64a in QEventLoop::exec (this=this@entry=0x7f517ec75ce0, flags=..., flags@entry=...) at kernel/qeventloop.cpp:212
#8  0x00007f519170f554 in QThread::exec (this=this@entry=0xe45c10) at thread/qthread.cpp:522
#9  0x00007f51922eaa35 in QQmlThreadPrivate::run (this=0xe45c10) at qml/ftw/qqmlthread.cpp:147
#10 0x00007f51917146eb in QThreadPrivate::start (arg=0xe45c10) at thread/qthread_unix.cpp:376
#11 0x00007f518d8b76ba in start_thread (arg=0x7f517ec76700) at pthread_create.c:333
#12 0x00007f5190d1841d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 2 (Thread 0x7f517fe87700 (LWP 20382)):
#0  0x00007f5190d0827d in read () at ../sysdeps/unix/syscall-template.S:84
#1  0x00007f518b8026f0 in read (__nbytes=16, __buf=0x7f517fe86ac0, __fd=<optimized out>) at /usr/include/x86_64-linux-gnu/bits/unistd.h:44
#2  g_wakeup_acknowledge (wakeup=0xdee6c0) at /build/glib2.0-prJhLS/glib2.0-2.48.2/./glib/gwakeup.c:210
#3  0x00007f518b7bee74 in g_main_context_check (context=context@entry=0x7f5178000990, max_priority=2147483647, fds=fds@entry=0x7f5178003220, n_fds=n_fds@entry=1) at /build/glib2.0-prJhLS/glib2.0-2.48.2/./glib/gmain.c:3632
#4  0x00007f518b7bf330 in g_main_context_iterate (context=context@entry=0x7f5178000990, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at /build/glib2.0-prJhLS/glib2.0-2.48.2/./glib/gmain.c:3837
#5  0x00007f518b7bf49c in g_main_context_iteration (context=0x7f5178000990, may_block=may_block@entry=1) at /build/glib2.0-prJhLS/glib2.0-2.48.2/./glib/gmain.c:3901
#6  0x00007f51919485cb in QEventDispatcherGlib::processEvents (this=0x7f51780008c0, flags=...) at kernel/qeventdispatcher_glib.cpp:425
#7  0x00007f51918ef64a in QEventLoop::exec (this=this@entry=0x7f517fe86cd0, flags=..., flags@entry=...) at kernel/qeventloop.cpp:212
#8  0x00007f519170f554 in QThread::exec (this=this@entry=0x7f5193884d60 <(anonymous namespace)::Q_QGS__q_manager::innerFunction()::holder>) at thread/qthread.cpp:522
#9  0x00007f51936102c5 in QDBusConnectionManager::run (this=0x7f5193884d60 <(anonymous namespace)::Q_QGS__q_manager::innerFunction()::holder>) at qdbusconnection.cpp:178
#10 0x00007f51917146eb in QThreadPrivate::start (arg=0x7f5193884d60 <(anonymous namespace)::Q_QGS__q_manager::innerFunction()::holder>) at thread/qthread_unix.cpp:376
#11 0x00007f518d8b76ba in start_thread (arg=0x7f517fe87700) at pthread_create.c:333
#12 0x00007f5190d1841d in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 1 (Thread 0x7f51958cb8c0 (LWP 20381)):
[KCrash Handler]
#6  QScopedPointer<QObjectData, QScopedPointerDeleter<QObjectData> >::data (this=<optimized out>) at ../../include/QtCore/../../src/corelib/tools/qscopedpointer.h:140
#7  qGetPtrHelper<QScopedPointer<QObjectData> > (p=...) at global/qglobal.h:1013
#8  QObject::d_func (this=<optimized out>) at ../../include/QtCore/../../src/corelib/kernel/qobject.h:120
#9  QObject::setProperty (this=0x0, name=name@entry=0x4ee2e1 "defaultStartup", value=...) at kernel/qobject.cpp:3874
#10 0x0000000000414a2a in DiscoverObject::openLocalPackage (this=this@entry=0xe3e9a0, localfile=...) at /workspace/build/discover/DiscoverObject.cpp:196
#11 0x000000000041330d in processArgs (parser=<optimized out>, mainWindow=mainWindow@entry=0xe3e9a0) at /workspace/build/discover/main.cpp:80
#12 0x0000000000411c4c in main (argc=2, argv=<optimized out>) at /workspace/build/discover/main.cpp:138

Reported using DrKonqi
Comment 1 Aleix Pol 2018-03-27 15:12:37 UTC
Git commit d98f2c9551666f7c06eafc4c806a34d9b7c4b09e by Aleix Pol.
Committed on 27/03/2018 at 15:11.
Pushed by apol into branch 'Plasma/5.12'.

Make sure we don't crash automatically

It seems like sometimes rootObject is null, take it into account even
though it's a symptom that something else is broken.

M  +18   -6    discover/DiscoverObject.cpp
M  +1    -0    discover/DiscoverObject.h

https://commits.kde.org/discover/d98f2c9551666f7c06eafc4c806a34d9b7c4b09e
Comment 2 Aleix Pol 2018-03-27 15:26:18 UTC
Chapatin, please run plasma-discover on the terminal and see if there's errors or something, I fear there's something else going on.
Comment 3 Patrick Silva 2018-03-27 15:39:27 UTC
Hi Aleix
Problem described here is not happening on neon dev untable anymore.