Make sure we don't crash automatically

It seems like sometimes rootObject is null, take it into account even
though it's a symptom that something else is broken.

BUG: 392082