discover/DiscoverObject.h
@@ -83,6 +83,7 @@ class DiscoverObject : public QObject
         void unableToFind(const QString &resid);
 
     private:
+        void setRootObjectProperty(const char *name, const QVariant &value);
         void integrateObject(QObject* object);
         QQmlApplicationEngine* engine() const { return m_engine; }
 
